--- a/Day 97 - Online Shop (Mini eCommerce) with Flask and Stripe/app/templates/index.html
+++ b/Day 97 - Online Shop (Mini eCommerce) with Flask and Stripe/app/templates/index.html
@@ -8,14 +8,19 @@
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
         {% for product in products %}
-            <div class="col">
-                <div class="card h-100 shadow-sm">
-                    <img src="{{ url_for('static', filename='images/' + product.image_file) }}" class="card-img-top" alt="{{ product.name }}">
+            <div class="col product-col">
+                
+                <div class="card h-100 product-card">
+                    
+                    <div class="card-img-container">
+                        <img src="{{ url_for('static', filename='images/' + product.image_file) }}" class="card-img-top" alt="{{ product.name }}">
+                    </div>
 
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">{{ product.name }}</h5>
                         <p class="card-text">{{ product.description }}</p>
-                        <h6 class="card-subtitle mb-2 text-success fs-5">R$ {{ "%.2f"|format(product.price) }}</h6>
+                        
+                        <h6 class="card-subtitle mb-2 card-price fs-5">R$ {{ "%.2f"|format(product.price) }}</h6>
 
                         <form method="POST" action="{{ url_for('main.index') }}" class="mt-auto">
                             <input type="hidden" name="product_id" value="{{ product.id }}">
